--- a/index.html
+++ b/index.html
@@ -18,5 +18,35 @@
                 <a class="donate-btn" target="_blank" href="#">Donate Now</a>
             </div>
         </section>
+        <section id="donate-today">
+            <div class="donate-des">
+                <h2>Donate Today</h2>
+                    <p>There are so many people who are suffuring today because of the natural disesters of flood. They need our help. They need food ,medicine,space for living. So we are here to help and we need you to help them to get out of this disesters by your donation. Stand for humanity.</p>
+            </div>
+            <div class="pick-ammount">
+                
+                <div>
+                    <h3>100tk</h3>
+                </div>
+                <div id="money">
+                    <h3>200tk</h3>
+                </div>
+                <div>
+                    <h3>500tk</h3>
+                </div>
+                <div>
+                    <h3>1000tk</h3>
+                </div>
+                <div>
+                    <h3>5000tk</h3>
+                </div>
+            </div>
+            <div class="other-ammount">
+                <input class="ammount" type="text" placeholder="Other Ammount (Taka)">
+                <hr class="horizontal">
+                <a class="donate-btn" target="_blank" href="#">Donate Now</a>
+            </div>
+            
+         </section>
 </body>
 </html>
