our donate plan added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet">
     <title>donate for flood area</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -46,7 +49,55 @@
                 <hr class="horizontal">
                 <a class="donate-btn" target="_blank" href="#">Donate Now</a>
             </div>
-            
+          </section>
+          <section id="donate-plan">
+            <div class="donate-plan-des">
+                <h2>Our Donate Plan</h2>
+                <p>We are planing about that we will give food to 500 family's. We will provide them dry food, medicine, sanitary napkin and some cash. After complete this project we will plan about to cook food for them.</p>
+            </div>
+            <div class="card">
+                <div class="food">
+                    <img src="icons/food.png" alt="">
+                    <h3>Food for a family</h3>
+                    <p>They cannot live without foods. Those family's are  in truoble they cannot collect or find foods because they are surviving for their lives because of flood. There are thousands of family's. So we have to stand for them. We can support them by giving foods.</p>
+                </div>
+                <div class="selter">
+                    <img src="icons/shelter.png" alt="">
+                    <h3>Shelter for a family</h3>
+                    <p>Everywhere of that area are under the water. The water are drty and polluted. So many bacterial diseases are in this water and snakes and so many of them. So they need clean and hygienic shelter.</p>
+                </div>
+                <div class="education">
+                    <img src="icons/Frame-1.png" alt="">
+                    <h3>Education for a child</h3>
+                    <p>A country can develop or grow properly if they have an educated nation. Education makes a man perfet and wise. A wise man or people can bring his country stairs of improvement. So today's children should be educated. They should be sent to the shclool from their childhood. </p>
+                </div>
+            </div>
+         </section>
+         <section id="flood">
+            <div class="trouble">
+                 <div class="trouble-title">
+                    <h1>They Are In Trouble</h1>
+                    <h2><span class="give-a-hand">Give a hand for support !</span></h2>
+                 </div>
+            </div>
+            <hr class="trouble-hr">
+            <div class="trouble-card">
+                <div>
+                    <img src="images/donation1.jpg" alt="">
+                </div>
+                <div>
+                    <img src="images/donation10.jpg" alt="">
+                </div>
+                <div>
+                    <img src="images/donation3.jpg" alt="">
+                </div>
+                <div>
+                    <img src="images/donation8.jpg" alt="">
+                </div>
+            </div>
+            <div class="our-help">
+                <h3>They Need Our Help!</h3>
+            </div>
          </section>
 </body>
 </html>
