they are in trouble added

--- a/index.html
+++ b/index.html
@@ -99,5 +99,17 @@
                 <h3>They Need Our Help!</h3>
             </div>
          </section>
+         <section id="my-updates">
+            <div class="updates-des">
+                <h2>Get My Updates</h2>
+                <p>You can follow me on facebook or instagram. You will get the updates when i post a new project in online. So stay connected with me thrugh internet.</p>
+            </div>
+            <div class="form-div">
+                <form action="">
+                    <input class="mail" type="text" placeholder="Email">
+                     <button class="subs">subscribe</button>
+                </form>
+            </div>
+         </section>
 </body>
 </html>
