--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="education">
                     <img src="icons/Frame-1.png" alt="">
                     <h3>Education for a child</h3>
-                    <p>A country can develop or grow properly if they have an educated nation. Education makes a man perfet and wise. A wise man or people can bring his country stairs of improvement. So today's children should be educated. They should be sent to the shclool from their childhood. </p>
+                    <p>A country can develop or grow properly if they have an educated nation. Education makes a man perfet and wise. A wise man or people can bring his country stairs of improvement. So today's children should be educated. They should be sent to the school from their childhood. </p>
                 </div>
             </div>
          </section>
@@ -112,4 +112,8 @@
             </div>
          </section>
 </body>
+<footer>
+    <h2><span class="footer-color">Donate Poor People</span></h2>
+<small>Give your hand for humanity</small>
+</footer>
 </html>
